<resources>
    <string name="app_name">XbeeAndroidApp</string>
    <string name="node_id">Node Identifier: </string>
    <string name="mac">Mac address: </string>
    <string name="mac_16bit">16 bit address: </string>
    <string name="role">Role: </string>
    <string name="active">Active: </string>
    <string name="http">http://</string>
    <string name="please_type">Type Xbee server address</string>
    <string name="connect">Connect</string>
    <string name="discovering">Discovering devices…</string>
    <string name="no_active_devices">There are no active devices in ZigBee Network</string>
    <string name="sampling">Sampling rate, ms</string>
    <string name="change_detection">Change Detection </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="write_changes">Write changes</string>
    <string name="refresh_all">Refresh all</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="written">Written successfully</string>
    <string name="not_written">Cannot write changes</string>
    <string name="not_start_discovery">Cannot start discovery process!</string>
    <string name="not_get_devices">Cannot get devices!</string>
    <string name="null_response">Response is null!</string>
    <string name="timeout">Timeout</string>
    <string name="type_timeout">Please type timeout, ms</string>
    <string name="timeout_range">Timeout range </string>
    <string name="min_timeout">Minimum timeout is </string>
    <string name="max_timeout">Maximum timeout is </string>
    <string name="not_change_ni">Cannot change NI</string>
    <string name="not_change_ir">Cannot change IR</string>
    <string name="D0">D0</string>
    <string name="D1">D1</string>
    <string name="D2">D2</string>
    <string name="D3">D3</string>
    <string name="D4">D4</string>
    <string name="D5">D5</string>
    <string name="P0">P0</string>
    <string name="P1">P1</string>
    <string name="P2">P2</string>
    <string name="VR">VR</string>
    <string name="HV">HV</string>
    <string name="IR">IR</string>
    <string name="NI">NI</string>
    
    <string-array name="d0_items">
        <item>Disabled [0]</item>
        <item>Commissioning Button [1]</item>
        <item>ADC [2]</item>
        <item>Digital Input [3]</item>
        <item>Digital Out, Low [4]</item>
        <item>Digital Out, High [5]</item>
    </string-array>
    <string-array name="d1_items">
        <item>Disabled [0]</item>
        <item>NA [1]</item>
        <item>ADC [2]</item>
        <item>Digital Input [3]</item>
        <item>Digital Out, Low [4]</item>
        <item>Digital Out, High [5]</item>
    </string-array>
    <string-array name="d4_items">
        <item>Disabled [0]</item>
        <item>NA [1]</item>
        <item>NA [2]</item>
        <item>Digital Input [3]</item>
        <item>Digital Out, Low [4]</item>
        <item>Digital Out, High [5]</item>
    </string-array>
    <string-array name="d5_items">
        <item>Disabled [0]</item>
        <item>Associated Indicator [1]</item>
        <item>NA [2]</item>
        <item>Digital Input [3]</item>
        <item>Digital Out, Low [4]</item>
        <item>Digital Out, High [5]</item>
    </string-array>
    <string-array name="p0_items">
        <item>Disabled [0]</item>
        <item>RSSI PWM Output [1]</item>
        <item>NA [2]</item>
        <item>Digital Input [3]</item>
        <item>Digital Out, Low [4]</item>
        <item>Digital Out, High [5]</item>
    </string-array>

</resources>
