<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.DeviceParametersActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <include layout="@layout/toolbar"
                android:id="@+id/toolbar" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/node_id" />
                <EditText
                    android:id="@+id/edit_node_id"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/refresh_ni_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/circle"
                    android:layout_marginRight="3dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/baseline_refresh_white" />

            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/mac" />
                <TextView
                    android:id="@+id/mac"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/mac_16bit" />
                <TextView
                    android:id="@+id/mac16bit"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/firmware_version" />
                <TextView
                    android:id="@+id/firmware_version"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/hardware_version" />
                <TextView
                    android:id="@+id/hardware_version"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="3dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/sampling" />
                <EditText
                    android:paddingLeft="10dp"
                    android:id="@+id/sampling"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/refresh_sampling_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/circle"
                    android:layout_marginRight="3dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/baseline_refresh_white" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/D0" />
                <Spinner
                    android:id="@+id/D0"
                    android:layout_weight="1"
                    android:entries="@array/d0_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/D1" />
                <Spinner
                    android:id="@+id/D1"
                    android:layout_weight="1"
                    android:entries="@array/d1_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/D2" />
                <Spinner
                    android:id="@+id/D2"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/d1_items"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/D3" />
                <Spinner
                    android:id="@+id/D3"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/d1_items"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/D4" />
                <Spinner
                    android:id="@+id/D4"
                    android:layout_width="match_parent"
                    android:entries="@array/d4_items"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/D5" />
                <Spinner
                    android:id="@+id/D5"
                    android:layout_width="match_parent"
                    android:entries="@array/d5_items"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/P0" />
                <Spinner
                    android:id="@+id/P0"
                    android:layout_width="match_parent"
                    android:entries="@array/p0_items"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/P1" />
                <Spinner
                    android:id="@+id/P1"
                    android:layout_width="match_parent"
                    android:entries="@array/d4_items"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow android:paddingTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/P2" />
                <Spinner
                    android:id="@+id/P2"
                    android:layout_width="match_parent"
                    android:entries="@array/d4_items"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/track_changes_white"
        android:layout_margin="16dp"
        android:onClick="onClick"
        app:backgroundTint="@color/colorPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>