<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:padding="5dp"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="4dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">
        <ImageView
            android:id="@+id/xbee_icon"
            android:layout_height="wrap_content"
            android:padding="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/nodeId"
                    android:layout_width="wrap_content"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:padding="3dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mac"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>
                <TextView
                    android:padding="3dp"
                    android:id="@+id/mac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mac_16bit"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>
                <TextView
                    android:padding="3dp"
                    android:id="@+id/mac_16bit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"/>
                <TextView
                    android:padding="3dp"
                    android:id="@+id/role"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </GridLayout>

</androidx.cardview.widget.CardView>